# db/models/User.js
@@ -35,6 +35,13 @@ const User = sequelize.define(
       type: DataTypes.STRING,
       defaultValue: null,
     },
+    verify: {
+      type: DataTypes.BOOLEAN,
+      defaultValue: false,
+    },
+    verificationToken: {
+      type: DataTypes.STRING,
+    },
   },
   {
     sequelize,
